# nvidia_fan_control

./: .pre-commit-config.yaml  AGENTS.md  README.md  nvidia-fan-control.py  nvidia-fan-control.service  pyproject.toml  ruff.toml  stress_vllm.py
.claude/: settings.json
src/nvidia_fan_control/: main.py
