[project]
name = "nvidia-fan-control"
version = "0.1.0"
description = "Headless NVIDIA GPU fan control daemon for Linux AI workloads"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "nvidia-ml-py"
]

[project.optional-dependencies]
stress = ["aiohttp"]

[project.urls]
Homepage = "https://github.com/pythoninthegrass/nvidia_fan_control"
Repository = "https://github.com/pythoninthegrass/nvidia_fan_control"

[project.scripts]
nvidia-fan-control = "nvidia_fan_control:main"
stress-vllm = "nvidia_fan_control.stress_vllm:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
